--- a/EstudiantesLPII.csproj
+++ b/EstudiantesLPII.csproj
@@ -125,6 +125,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\Estudiantes.cs" />
+    <Compile Include="Models\Materias.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
